k8s/nexus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nexus-service
spec:
  backend:
    serviceName: nexus-service
    servicePort: 8081
